# openpose-plus

./: .gitattributes  CMakeLists.txt  README.md
include/: channel.hpp  demo.h  helpers.h  openpose-plus.hpp  pose-detetor.h  stream_detector.h
include/cuda-9.0/: builtin_types.h  channel_descriptor.h  common_functions.h  cooperative_groups.h  cooperative_groups_helpers.h  cuComplex.h  cublas.h  cublasXt.h  cublas_api.h  cublas_v2.h  cuda.h  cudaEGL.h  cudaGL.h  cudaProfiler.h  cudaVDPAU.h  cuda_device_runtime_api.h  cuda_fp16.h  cuda_fp16.hpp  cuda_gl_interop.h  cuda_occupancy.h  cuda_profiler_api.h  cuda_vdpau_interop.h  cudalibxt.h  cusolverDn.h  cusolverSp.h  cusolver_common.h  cusparse.h  nppcore.h  nppdefs.h  nppi.h  nppi_arithmetic_and_logical_operations.h  nppi_color_conversion.h  nppi_compression_functions.h  nppi_data_exchange_and_initialization.h  nppi_filtering_functions.h  nppi_geometry_transforms.h  nppi_linear_transforms.h  nppi_morphological_operations.h  nppi_statistics_functions.h  nppi_threshold_and_compare_operations.h  (+42 more)
include/cuda-9.0/CL/: cl.h  cl.hpp  cl_egl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
include/cuda-9.0/crt/: common_functions.h  device_double_functions.h  device_double_functions.hpp  device_functions.h  device_functions.hpp  func_macro.h  host_config.h  host_defines.h  host_runtime.h  math_functions.h  math_functions.hpp  mma.h  mma.hpp  nvfunctional  sm_70_rt.h  sm_70_rt.hpp  storage_class.h
include/cuda-9.0/thrust/: adjacent_difference.h  advance.h  binary_search.h  complex.h  copy.h  count.h  device_allocator.h  device_delete.h  device_free.h  device_malloc.h  device_malloc_allocator.h  device_new.h  device_new_allocator.h  device_ptr.h  device_reference.h  device_vector.h  distance.h  equal.h  execution_policy.h  extrema.h  fill.h  find.h  for_each.h  functional.h  gather.h  generate.h  host_vector.h  inner_product.h  logical.h  memory.h  merge.h  mismatch.h  pair.h  partition.h  random.h  reduce.h  remove.h  replace.h  reverse.h  scan.h  (+15 more)
include/cuda-9.0/thrust/detail/: adjacent_difference.inl  config.h  contiguous_storage.inl  copy_if.h  copy_if.inl  count.inl  device_malloc.inl  device_vector.inl  equal.inl  execution_policy.h  fill.inl  gather.inl  host_vector.inl  integer_traits.h  internal_functional.h  numeric_traits.h  partition.inl  pointer.h  reduce.inl  reference.inl  remove.inl  seq.h  sort.inl  static_assert.h  swap.h  swap_ranges.inl  tuple.inl  type_traits.h  unique.inl
include/cuda-9.0/thrust/iterator/: constant_iterator.h  counting_iterator.h  discard_iterator.h  iterator_adaptor.h  iterator_categories.h  iterator_facade.h  iterator_traits.h  (+6 more)
include/tensorRT/: NvCaffeParser.h  NvInfer.h  NvInferPlugin.h  NvOnnxConfig.h  NvOnnxParser.h  NvUffParser.h
scripts/: demo_batch_detector.sh  demo_live_camera.sh  demo_stream_detector.sh
src/: demo_batch_detector.cpp  demo_live_camera.cpp  demo_stream_detector.cpp
(+481 files in other folders)
